# karana

./: README.md  example.py  gdp_ratio.py  imf_series_descriptions.json  owid_life_expectancy_test.html  pyproject.toml  terrorism.html  terrorism.py  test_line_graph_output.html  worldbank_series_descriptions.json
.cache/owid/: chart_a.feather  chart_b.feather  children-born-per-woman.feather  gdp-per-capita-maddison-project-database.feather  gdp-per-capita-penn-world-table.feather  gdp-per-capita-worldbank-constant-usd.feather  gdp-per-capita-worldbank.feather  life-expectancy.feather  population.feather  terrorism-deaths.feather  terrorist-attacks.feather
data/: imf_weo_ngdpdpc.csv
karana/: __init__.py  _expression.py  _line_graph.py  _plot.py  _scatter_plot.py
karana/loaders/: __init__.py  imf.py  owid.py  worldbank.py
scripts/: export_imf_series.py  export_worldbank_series.py
test_outputs/: owid_life_expectancy_test.html  owid_scatter_life_vs_gdp.html  test_line_graph_output.html  worldbank_gdp_per_capita.html
tests/: test_line_graph.py  test_loaders_imf.py  test_loaders_owid.py  test_loaders_worldbank.py  test_scatter_plot.py
