[project]
name = "karana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "owid-catalog>=0.3.11",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pytest>=9.0.0",
    "wbgapi>=1.0.12",
]

[dependency-groups]
dev = [
    "karana",
]

[tool.uv.sources]
karana = { workspace = true }
